# shoal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.grouper  Makefile  README.md  docker-compose.yml  go.mod  go.sum  shoal-pool.json
.github/workflows/: ci.yml
.zig-cache/tmp/: id_19.js
clients/python/: pyproject.toml  shoal.py
cmd/agent/: main.go
cmd/controller/: main.go
examples/: README.md  hlcu_test.py  login_test.py  longlived_test.py  scale_test.py  scrape.py  stress_test.py  tides.py
examples/testsite/: main.go
internal/agent/: actions.go  actions_test.go  agent.go  backend.go  backend_test.go  cdp.go  chrome.go  server.go  tlsclient.go  tlsclient_test.go  xhr.go
internal/api/: constants.go  env.go  types.go  version.go
internal/controller/: compat.go  cookies.go  dashboard.go  health.go  health_test.go  identity.go  identity_test.go  metrics.go  pool.go  pool_test.go  proxy.go  quality.go  renewer.go  server.go  server_test.go  store.go  store_test.go  timeseries.go  timeseries_test.go
internal/remora/: remora.go  remora_test.go
internal/tides/: tides.go  tides_test.go
pkg/shoal/: client.go  client_test.go
