[project]
name = "shoal-client"
version = "0.3.0"
description = "Python client for the Shoal browser orchestration platform"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
